<resources>
    <string name="app_name">NewDatabase</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="insertrecord">INSERT RECORD</string>
    <string name="readdata">READ DATA</string>
    <string name="updaterecord">UPDATE RECORD</string>
    <string name="deleterecord">DELETE RECORD</string>
    <string name="sqlite">SQLite</string>
</resources>
