<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertrecord" />

            <Button
                android:id="@+id/buttonRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readdata" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updaterecord" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleterecord" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>